fix: adjust gap and remove justify-content for populargames content layout

--- a/src/assets/css/modules/_populargames.scss
+++ b/src/assets/css/modules/_populargames.scss
@@ -54,9 +54,8 @@
     &__content {
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
         flex-wrap: wrap;
-        gap: 24px;
+        gap: 40px;
 
         &-card {
             width: 291px;
